# Model-Ouroboros

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  setup.sh
dev/: pre-commit  setup-hooks.sh
experiments/: delete_runs.sh
src/: config.py  create_gif.py  load_dataset.py  main.py  models.py  training_utils.py  utils.py  visualisation_utils.py
